--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="profile">
           <img class="man" src="images/young-man.png" alt="man">
           <h2>Hello.</h2>
-          <p class="intro">I am an iOS and web Developer.I'm the founder and CEO of Pizza mania.I love coffee and brew my own beer</p>
+          <p class="intro">I am an iOS and web Developer.I'm the founder and CEO of College Student portal.I love coffee and brew my own beer</p>
         </div>
         <hr>
         <div class="skills">
@@ -36,21 +36,21 @@
           <div class="skill-row">
             <img class="comp" src="images/computer.png" alt="comp">
             <h3>Design & Developement</h3>
-            <p class="clear-text">I started learning code when I was 12 because I wanted to make my own video gamesOver a time, I have
+            <p class="clear-text">I started learning code when I was 12 because I wanted to make my own video games Over a time, I have
                 gained a wealth of experience in designing and developing Mobile and web developing.</p>
           </div>
           <div class="skill-row">
             <img class="think" src="images/logical-thinking.png" alt="think">
-            <h3>Over Thinking</h3>
-            <p class="clear-thinker">But my best skill is overthing,however it doest make me feel bad or irritate me, it helps to give me good ideas
-                to do things best known.</p>
+            <h3>Learning new things</h3>
+            <p class="clear-thinker">>But my best skill is learning everyday new things,however I try to learn everyday new things and am not bound to few skills,
+              I believe that I can build any skill in me(multitasker) and positive toward change.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>If you love overthinking as much I do!.</h3>
-          <p class="contact-message">Love thinking things for long time? take a overthinking nap before coming to home and will code together!.</p>
+          <h3>If you love programming as much I do!.</h3>
+          <p class="contact-message">Love programming take a coffee before coming to home and will code together!.</p>
           <a class="btn" href="arun.4479kumar@gmail.com">CONTACT ME</a>
         </div>
       </div>
